Adapted codebase to Java 17 standards, applied inspection suggestions on the code, and fixed grammar issues
Signed-off-by: Noam Dori <TheNODO55@gmail.com>